app/style.css
body {
    font-family: Arial, Helvetica, sans-serif;
    overflow: hidden;
    margin: 0;
    height: 0;
}

#header-div {
    height: 10vh;
    background-color:darkslategray;
    box-shadow: inset 0px 0px 2px 0px black;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: lightgray;
    font-size: x-large;
    display: flex;
}

.header-panel {
    margin: 0px 20px 0px 20px;
}

#app-div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: stretch;
}

#ui-container {
    text-align: center;
    overflow: auto;
    flex: 1;
    box-shadow: inset 0px 0px 4px 0px black;
    height: 90vh;
    flex-shrink: 0;
    position: relative;
}

#ui-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: stretch;
    margin-bottom: 5px;
    background-color: lightgray;
}

.ui-header-tab {
    flex: 1;
    border-width: 1px 1px 0px 1px;
    border-style: solid;
    border-color: black;
    margin: 3px 3px 0px 3px;
    padding: 10px;
    border-radius: 5px 5px 0px 0px;
    word-break:break-all;
}

.ui-header-tab:hover {
    box-shadow: 0 -5px 5px 2px rgba(0, 0, 0, 0.5);
}

.sick-button-design {
    background-color: #fff;
    border: 1px solid black;
    border-radius: 5px;
    padding: 10px;
}

.sick-button-design:hover {
    background-color: #aaa;
    box-shadow: 0 -2px 5px 1px rgba(0, 0, 0, 0.5);
}

canvas {
    display: block;
}

#canvas-wrapper {
    position: relative;
    flex: 3;
}

#canvas-div {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    line-height: 0; /* not the slightest idea why this line works https://stackoverflow.com/a/41840263/8272888 */
}

#canvas-overlay {
    position: absolute;
    left: 1%;
    top: 1%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#overlay-ui {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
}

#overlay-menu-container {
    background-color:lightskyblue;
    margin: 5px;
    display: none;
    padding: 10px;
    border-radius: 5px;
    background-color: white;
    border: 1px solid black;
}

/* MathQuill stuff */

.math-input-container {
    width: 100%;
    position: relative;
    overflow: hidden;
}

.math-input-div {
    display: flex;
    flex-direction: row;
    align-items: stretch;
}

.math-input-div-container {
    display: flex;
    flex-direction: column;
    border: 1px solid gray;
}

.math-input-side-menu {
    flex: 1;
    display: flex;
    flex-direction:row;
    background-color:cadetblue;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.math-input-div:hover {
    box-shadow: 0px 0px 5px black;
}

.math-input {
    flex: 4;
    display: block;
    position: relative;
    max-width: 80%;
	padding: 3px;
	box-sizing: border-box;
	margin: 0px;
	background-color: white;
	font-size: 16pt;
}

*:focus {
    outline: none;
    box-shadow: none;
}

#settings-popup {
    position: absolute;
    height: 90vh;
    width: 90vw;
    z-index: 1000;
    background-color: white;
    color: black;
    border: 3px solid black;
    margin: 5vh 5vw 5vh 5vw;
    display: none;
    flex-direction: column;
    align-items: center;
}

#close-settings-btn {
    position: absolute;
    top: 10px;
    right: 10px;
}

hr {
    color: black;
    background-color: black;
}

.slider-container {
    padding: 10px 0px 10px 0px;
}

input[type="range"] {
    -webkit-appearance: none;
    appearance: none;
    background: transparent;
    cursor: pointer;
    width: 50%;
}

input[type="range"]:focus {
    outline: none;
}

input[type="range"]::-webkit-slider-runnable-track {
    background-color: lightgray;
    border-radius: 0.5rem;
    height: 0.5rem;  
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    margin-top: -0.25rem;
    border-radius: 0.5rem;

    background-color: cadetblue;
    height: 1rem;
    width: 1rem;
}

input[type="range"]:focus::-webkit-slider-thumb {   
    border: 1px solid lightgray;
    outline: none;
}

input[type="range"]::-moz-range-track {
    background-color: lightgray;
    border-radius: 0.5rem;
    height: 0.5rem;
}

input[type="range"]::-moz-range-thumb {
    border: none;
    border-radius: 0.5rem;

    background-color: cadetblue;
    height: 1rem;
    width: 1rem;
}

input[type="range"]:focus::-moz-range-thumb {
    border: 1px solid lightgray;
    outline: none;
}

#drag-expr-bar {
    width: 30px;
    position: absolute;
    right: 0;
    top: 0;
    height: 100%;
    z-index: 100;
    cursor: col-resize;
}

